--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div>
     <h4> <a href="https://www.prothomalo.com/bangladesh/4jq45yprpr" target="_blank"><u> বাংলাদেশ </u> </a> </h4>
-    <h1>উপাচার্য নিয়োগ নিয়ে বিএনপি ও জামায়াতপন্থী শিক্ষকদের পাল্টাপাল্টি বিবৃতি</h1>
+    <h1 style="font-weait: bold;">উপাচার্য নিয়োগ নিয়ে বিএনপি ও জামায়াতপন্থী শিক্ষকদের পাল্টাপাল্টি বিবৃতি</h1>
     <p><b>প্রতিনিধিচট্টগ্রাম</b> বিশ্ববিদ্যালয়</p>
     <p>প্রকাশ: ২৩ আগস্ট ২০২৪, ১৭: ২৫</p>
     <hr>
